# todo-mvc-bench

./: .gitignore  Cargo.toml  README.md  index.html  sot.yaml  style.css
.github/workflows/: cicd.yml
frameworks/angularjs-perf/: package.json
frameworks/asterius/: index.html  todomvc.js  todomvc.wasm
frameworks/mithril-2/: index.html
frameworks/mogwai-0.2/pkg/: package.json
frameworks/mogwai/pkg/: package.json
frameworks/sauron/pkg/: todomvc.d.ts  todomvc.js  todomvc_bg.d.ts  todomvc_bg.wasm
frameworks/vue/: index.html
frameworks/yew/: todomvc.d  todomvc.js  todomvc.wasm
frameworks/yew-0.10/: index.html  todomvc.wasm
lib/: Cargo.toml
lib/src/: async_event.rs  find.rs  framework_card.rs  lib.rs
scripts/: build.sh  common.sh
